package com.designpattern.behavioral.lterator;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/14 11:20
 * @Description:
 */
public interface Container {
    Iterator getIterator();
}
