package com.designpattern.behavioral.lterator;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/14 11:20
 * @Description:
 */
public interface Iterator {
    boolean hasNext();

    Object next();
}
